GNOME Bugzilla – Bug 757924
splitmuxpartreader: Fix GCond leak
Last modified: 2015-11-16 07:18:43 UTC
inactive_cond is not being cleared resulting in memory leak
Created attachment 315223 [details] [review] fix memory leak
commit b0114bacdbf57f6c2fc6891c6fec8b1625b97768 Author: Vineeth TM <vineeth.tm@samsung.com> Date: Wed Nov 11 14:10:53 2015 +0900 splitmuxpartreader: Fix GCond leak inactive_cond is not being cleared resulting in memory leak. https://bugzilla.gnome.org/show_bug.cgi?id=757924